# smart_office_security_v2

./: .gitignore  MQTT_GUIDE.md  README.md
cpp_implementation/: CMakeLists.txt
cpp_implementation/src/: CameraStream.cpp  CameraStream.h  DisplayWindow.cpp  DisplayWindow.h  PersonDetector.cpp  PersonDetector.h  ZigbeeSender.cpp  ZigbeeSender.h  main.cpp
python_implementation/: RASPBERRY_PI_INTEGRATION.md  README.md  environment.yml  requirements.txt
python_implementation/docs/: architecture.md  deployment.md  development.md  roadmap.md  setup.md  testing.md  zigbee_integration.md
python_implementation/main_computer_listeners/: alert_listener.py  log_saver.py  requirements.txt  video_viewer.py
python_implementation/main_computer_listeners/detection_logs/: 2025-05-06_18-37-50_314721.json  2025-05-06_18-38-06_415264.json  2025-05-06_18-38-15_786755.json  2025-05-06_18-52-40_673611.json  2025-05-06_18-52-52_416114.json  2025-05-06_18-53-12_987004.json  2025-05-06_18-53-46_475651.json  2025-05-06_19-12-33_356713.json  2025-05-07_00-09-01_295329.json  2025-05-07_00-10-44_407212.json  2025-05-07_00-11-20_339520.json  2025-05-07_00-11-28_734649.json  2025-05-19_16-41-06_144601.json  2025-05-20_14-54-43_823226.json  2025-05-20_14-55-30_757952.json  2025-05-20_15-02-02_405075.json  2025-05-20_15-04-50_961064.json  2025-05-20_15-05-36_063196.json  2025-05-20_15-05-55_602629.json  2025-05-20_15-06-19_511592.json  (+4 more)
python_implementation/models/: coco_labels.txt
python_implementation/src/: camera.py  display.py  inference.py  logger.py  main.py  mqtt_client.py  zigbee.py
